# curso-langchain

./: README.md  chat_prompt_template.py  hello_world.py  init_chat_model.py  main.py  prompt_template.py  pyproject.toml
agents_and_tools/: 12_agente_react.py  poc.py  poc2.py  poc3.py  poc4.py
armazenamento_historico/: 13_armazenamento.py
chains_and_processing/: 05_iniciando_com_chains.py  06_chains_with_decorator.py  07_runnable_lambda.py  08_pipeline_de_processamento.py  09_sumarizacao.py  10_sumarizacao_map_reduce.py  11_pipeline_de_sumarizacao.py
fundamentos/: 01_hello_world_classic_approach.py  02_hello_world_unified_approach.py  03_prompt_template.py  04_chat_prompt_template.py
