[project]
name = "curso-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "langchain>=1.0.5",
    "langchain-google-genai>=3.0.2",
    "langchain-google-vertexai>=3.0.3",
    "langchain-openai>=1.0.2",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
]
